# libxpc

./: CMakeLists.txt  mpack.c  mpack.h  xpc_array.c  xpc_connection.c  xpc_dictionary.c  xpc_internal.h  xpc_misc.c  xpc_type.c
examples/: CMakeLists.txt
examples/credentials/: CMakeLists.txt  xpc-credentials-server.c
examples/echo-client/: CMakeLists.txt  xpc-echo-client.c
examples/echo-server/: CMakeLists.txt  xpc-echo-server.c
examples/json-client/: Makefile  xpc-json-client.c
python/: setup.py
python/src/: blocks_wrapper.c  xpc.pxd  xpc.pyx
transports/: mach.c  unix.c
xpc/: xpc.h
